--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <input id="Name" class="form-control" type="text">
     </div>
     <div class="form-group">
-      <label for="app">Description of Appointment</label>
+      <label for="app">Description of Appointments</label>
       <input id="app" class="form-control" type="text">
     </div>
     <div class="form-group">
